<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">secondassignment</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="enter_number">Enter number</string>
    <string name="original_number">100</string>
    <string name="enter_weight">Enter weight (kg)</string>
    <string name="compute">Compute</string>
    <string name="clear">Clear</string>
    <string name="bmi_presenter">your bmi is: </string>
    <string name="enter_height">Enter height (m) use format (m.cm) </string>
    <string name="enter_country">Enter country </string>
    <string name="no_country">No country </string>
    <string name="enter_year">Enter year </string>
    <string name="send">Send </string>
    <string name="create_background">Create background </string>
    <string name="new_activity">New activity </string>
    <string name="red">Red </string>
    <string name="green">Green </string>
    <string name="blue">Blue </string>
    <string name="rgb_value">RGB value </string>
    <string name="update_weather">Update weather </string>
    <string name="widget_text">Widget text </string>
    <string name="sort_asc">Sort by asc </string>
    <string name="sort_order">Sort by year </string>
    <string name="size">Size </string>
    <string name="no_alarm_set">No alarm set </string>
    <string name="reset_alarm">Reset alarm </string>
    <string name="set_alarm">Set alarm </string>
    <string name="count_view">Count view</string>
    <string name="stop_alarm">Stop alarm</string>
    <string name="this_mp3_player">This is the mp3 player</string>
    <string name="start">Start</string>
    <string name="enter_minute">Enter minute</string>
    <string name="enter_day">Enter day</string>
    <string name="enter_hour">Enter hour</string>
    <string name="enter_month">Enter month</string>
    <string name="colorrules">The color value must be 0 to 255</string>
    <string name="sort_rules">Leave blank meanes letters and descending</string>
    <string name="send_message">Send message</string>
    <string name="red_font_colour">Red font colour?</string>
    
    <string name="stop">Stop</string>
    <string name="pause">Pause</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="play">Play</string>
    <string name="empty">--</string>

    

</resources>


